feat: enhance contact management with sorting, add confirmation modal, and improve CSV headers